Feature - Added new HelloUser component in the component directory

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,13 @@
   color: white;
 }
 
+input {
+  padding: 4px 5px;
+  border-radius: 4px;
+  line-height: 1.5rem;
+  font-size: 1.2rem;
+}
+
 .App-link {
   color: #61dafb;
 }
