--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,28 @@
   text-align: center;
 }
 
+li {
+  list-style-type: none;
+  text-align: left;
+}
+
+button {
+  display: block;
+  margin: 10px auto;
+  border: none;
+  border-radius: 4px;
+  color: rgb(150, 47, 10);
+  font-size: 1rem;
+  font-weight: 500;
+  padding: 10px 20px;
+  transition: all ease-in-out 0.5s;
+}
+
+button:hover {
+  color: antiquewhite;
+  background-color: coral;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
@@ -19,7 +41,7 @@
 }
 
 input {
-  padding: 4px 5px;
+  padding: 5px;
   border-radius: 4px;
   line-height: 1.5rem;
   font-size: 1.2rem;
